--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div id="myDIV" class="header">
           <input type="text" id="myInput" placeholder="Title...">
-          <span class="addbtn">Add</span>
+          <span onclick="newElement()" class="addbtn">Add</span>
       </div>
 
       <ul id="myUL">
